Ajout de la vue des clients

--- a/com.opti.rental.ui.es/OSGI-INF/l10n/bundle_es.properties
+++ b/com.opti.rental.ui.es/OSGI-INF/l10n/bundle_es.properties
@@ -4,6 +4,7 @@ Bundle-Name = Ui
 category.name = Rental ES
 view.name = Rental Property ES
 view.name.0 = Rentals ES
+view.name.1 = Customer ES
 perspective.name = Rental Perspective ES
 page.name = Colors ES
 command.name = Hello Word ES
