--- a/com.opti.rental.ui/OSGI-INF/l10n/bundle.properties
+++ b/com.opti.rental.ui/OSGI-INF/l10n/bundle.properties
@@ -4,6 +4,7 @@ Bundle-Name = Ui
 category.name = Rental
 view.name = Rental Property
 view.name.0 = Rentals
+view.name.1 = Customer
 perspective.name = Rental Perspective
 page.name = Colors
 command.name = Hello Word
