Ajout de la page de préférence pour les palettes et prise en compte dans l'arbre.

--- a/com.opti.rental.ui/OSGI-INF/l10n/bundle.properties
+++ b/com.opti.rental.ui/OSGI-INF/l10n/bundle.properties
@@ -6,7 +6,7 @@ view.name = Rental Property
 view.name.0 = Rentals
 view.name.1 = Customer
 perspective.name = Rental Perspective
-page.name = Colors
+page.name = Default
 command.name = Hello Word
 menu.label = Texte
 command.label = Hello word
